<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddVehicleActivity" >
    
    <EditText 
        android:id="@+id/nicknameTxt"
        android:hint="@string/vehicle_nickname"
        android:inputType="text"
        android:maxLength="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp" />
    
    <Button
        android:id="@+id/imagePickerBtn"
        android:text="@string/imagePickerBtn_txt"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >
 
        <ImageView
            android:id="@+id/img"
            android:layout_width="75dp"
            android:layout_height="75dp" 
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>    
    
    <EditText 
        android:id="@+id/yearTxt"
        android:hint="@string/vehicle_year"
        android:inputType="number"
        android:maxLength="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp" />
    
    <EditText 
        android:id="@+id/makeTxt"
        android:hint="@string/vehicle_make"
        android:inputType="text"
        android:maxLength="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp" />
    
    <EditText 
        android:id="@+id/modelTxt"
        android:hint="@string/vehicle_model"
        android:inputType="text"
        android:maxLength="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp" />
    
    <Button
        android:text="@string/save" 
    	android:onClick="saveVehicleClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
